nat_gateways.tf
# Resource: aws_nat_gateway
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/nat_gateway

resource "aws_nat_gateway" "gw1" {
  # The allocation ID of the elastic ip address for the gateway
  allocation_id = aws_eip.nat1.id

  # the subnet ID of the subnet in which to place the gateway
  subnet_id = aws_subnet.public_1.id

  # A map of tags to assign to the resource.
  tags = {
    Name = "NAT1"
  }
}

resource "aws_nat_gateway" "gw2" {
  # The allocation ID of the elastic ip address for the gateway
  allocation_id = aws_eip.nat2.id

  # the subnet ID of the subnet in which to place the gateway
  subnet_id = aws_subnet.public_2.id

  # A map of tags to assign to the resource.
  tags = {
    Name = "NAT2"
  }
}
