rds.tf
# Resource: RDS mysql database
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/db_instance

# resource "aws_db_instance" "mysql-db" {
#   allocated_storage    = 10
#   engine               = "mysql"
#   engine_version       = "5.7"
#   instance_class       = "db.t2.micro"
#   name                 = "lf_iac-db"
#   username             = "foo"
#   password             = "foobarbaz"
#   parameter_group_name = "default.mysql5.7"
#   skip_final_snapshot  = true
#   publicly_accessible  = true
# }
